<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:padding="25dp"
    >

    <Button
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/dana"
        android:text="@string/dana"
        android:textSize="24dp"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="15dp"
        android:onClick="openCrops"
        android:background="@color/colorPrimaryDark" />

    <Button
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/dal"
        android:text="@string/dal"
        android:textSize="24dp"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="15dp"
        android:onClick="openCrops"
        android:background="@color/colorPrimaryDark" />

    <Button
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/tel"
        android:text="@string/tel"
        android:textSize="24dp"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="15dp"
        android:onClick="openCrops"
        android:background="@color/colorPrimaryDark" />

    <Button
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/sobji"
        android:text="@string/sobji"
        android:textSize="24dp"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="15dp"
        android:onClick="openCrops"
        android:background="@color/colorPrimaryDark" />

    <Button
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/kondal"
        android:text="@string/kondal"
        android:textSize="24dp"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="15dp"
        android:onClick="openCrops"
        android:background="@color/colorPrimaryDark" />


    <Button
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/masala"
        android:text="@string/masala"
        android:textSize="24dp"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="15dp"
        android:onClick="openCrops"
        android:background="@color/colorPrimaryDark" />

    <Button
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/other"
        android:text="@string/other"
        android:textSize="24dp"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="15dp"
        android:onClick="openCrops"
        android:background="@color/colorPrimaryDark" />

</LinearLayout>