<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:padding="25dp">

    // আলু মিষ্টিআলু মুখীকচু পানিকচু
    <Button
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/alu"
        android:text="@string/alu"
        android:textSize="24dp"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="15dp"
        android:onClick="onClick"
        android:background="@color/colorPrimaryDark" />
    <Button
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/mustialu"
        android:text="@string/mistialu"
        android:textSize="24dp"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="15dp"
        android:onClick="onClick"
        android:background="@color/colorPrimaryDark" />
    <Button
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/panikocu"
        android:text="@string/panikocu"
        android:textSize="24dp"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="15dp"
        android:onClick="onClick"
        android:background="@color/colorPrimaryDark" />
    <Button
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/mukhikocu"
        android:text="@string/mukhikocu"
        android:textSize="24dp"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="15dp"
        android:onClick="onClick"
        android:background="@color/colorPrimaryDark" />
</LinearLayout>